overlapping audio fix

--- a/NewJumbotron.css
+++ b/NewJumbotron.css
@@ -51,8 +51,9 @@ body {
 }
 
 .color-label {
-    font-family: 'Futura PT', sans-serif;
-    font-weight: bold;
+    font-family: "futura-pt-bold", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     font-size: 36px; /* Adjusted for consistency */
     color: white; /* Ensure visibility against the background */
 }
@@ -85,8 +86,9 @@ body {
     white-space: nowrap;
     position: absolute; /* Position the timer to stick to the right of the container */
     right: 0;
-    font-family: 'Futura PT', sans-serif;
-    font-weight: bold;
+    font-family: "futura-pt-bold", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     font-size: 36px; /* Adjusted for consistency */
     color: white; /* Ensure visibility against the background */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75); /* Horizontal offset, vertical offset, blur radius, color */
@@ -97,10 +99,11 @@ body {
     bottom: -1%;
     width: 100%;
     text-align: center;
-    font-weight: bold;
     font-size: 8vw; /* Use viewport width units for font size */
     color: white; /* White text color */
-    font-family: 'Futura PT', sans-serif;
+    font-family: "futura-pt-bold", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     z-index: 1000; /* Ensure it's visible above other elements */
 }
 
